--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
   <!-- ...add your CSS links here if needed... -->
 </head>
 <body>
-  <h1>Armon</h1>
-  <h2>Web Developer</h2>
-  <p>Passionate about building beautiful and functional web experiences. Always learning and exploring new technologies.</p>
+  <div class="profile-card">
+    <img src="img/Boys.jpeg" alt="Profile Image" style="width:160px; height:160px; object-fit:cover; border-radius:50%; display:block; margin:0% auto 16px;" />
+    <h1>Armon</h1>
+    <h2>Web Developer</h2>
+    <p class="bio">Passionate about building beautiful and functional web experiences. Always learning and exploring new technologies.</p>
+    <h3>My favorite websites!</h3>
+    <ul style="list-style:none; padding:0;">
+      <li style="margin-bottom:12px;"><a href="https://www.amazon.com/" target="_blank">Amazon Prime</a></li>
+      <li style="margin-bottom:12px;"><a href="https://www.ticketmaster.com/" target="_blank">Ticketmaster</a></li>
+      <li style="margin-bottom:12px;"><a href="https://www.youtube.com/" target="_blank">YouTube</a></li>
+      <li style="margin-bottom:12px;"><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+    </ul>
+  </div>
   <!-- ...your content goes here... -->
 </body>
 </html>
-
